--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     container_name: mongodb
     ports:
       - "27017:27017"
-    volumes:
-      - mongodb_data:/data/db
+    # volumes:
+    #   - mongodb_data:/data/db
     networks:
       - app-network
 
