Clean frontend docker

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
-# Use an official Node.js image as the base image
-FROM node:18 AS development
+# Use a lightweight Node.js image as the base image
+FROM node:18-alpine AS development
 
 # Set the working directory in the container
 WORKDIR /app
