Added a Go script to load json data and dockerzied the whole process]

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,13 +5,13 @@ FROM golang:1.22-alpine
 WORKDIR /app
 
 # Copy go.mod and go.sum files to the workspace
-COPY go.mod go.sum ./
+COPY backend/go.mod backend/go.sum ./
 
 # Download all dependencies. Dependencies will be cached if the go.mod and go.sum files are not changed
 RUN go mod download
 
 # Copy the entire backend code into the container
-COPY . .
+COPY backend/ .
 
 # Build the Go application
 RUN go build -o main .
